@@ -1,3 +1,8 @@
+2011-06-17  Tobias Burnus
+
+	PR fortran/49324
+	* gfortran.dg/alloc_comp_assign_11.f90: New.
+
 2011-06-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/49229
